--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pip==24.3.1
-streamlit==1.41.1
-pandas==2.2.3
-joblib==1.4.2
-tensorflow-cpu>=2.16.0
+gradio
+pandas
+numpy
+tensorflow
+scikit-learn
+joblib
